enviando aula de lp2

--- a/Linguagem de Programação II/utils/projeto-1/index.html
+++ b/Linguagem de Programação II/utils/projeto-1/index.html
@@ -18,7 +18,7 @@
         Amazon, Alphabet e a Meta</h2>
 
     <center>
-        <img src="https://cdn.borainvestir.b3.com.br/2024/02/26143320/NVIDIA.jpg.webp" alt="alt teste"
+        <img src="https://cdn.borainvestir.b3.com.br/2024/02/26143320/NVIDIA.jpg.webp" width="450px" alt="teste"
             title="teste novo title">
     </center>
 
@@ -93,7 +93,7 @@
     </p>
 
     <center>
-        <img src="/Linguagem de Programação II/utils/projeto-1/img/table.png">
+        <img src="/Linguagem de Programação II/utils/projeto-1/img/table.png" width="500px" height="300px">
     </center>
 
     <p>
@@ -177,7 +177,7 @@
     <!-- QUARTO TOPICO -->
     <h2>Quem é o fundador da Nvidia?</h2>
     <center>
-        <img src="https://cdn.borainvestir.b3.com.br/2024/02/26143222/NVIDIA-2.jpg.webp">
+        <img src="https://cdn.borainvestir.b3.com.br/2024/02/26143222/NVIDIA-2.jpg.webp" width="400px">
     </center>
     
         <p>Crédito: EFE/ Ritchie B. Tongo</p>
@@ -194,11 +194,33 @@
         Jensen Huang nasceu em Taiwan, sendo presidente da companhia desde sua fundação, em 1993. Segundo a Forbes, ele possui 3% de participação na Nvidia e foi responsável por tornar a empresa uma força dominante em chips para jogos de computador e expandir para projetar semicondutores para data centers e carros autônomos.
     </p>
 
+    <table border="1">
+            <tr> <!--table row--> 
+                <th>NUM</th> <!--table data-->
+                <th>PONT</th>
+                <th>AGUA</th>
+                <th>COCA</th>
+            </tr>
+        <tr>
+            <td>21</td> 
+            <td>22</td>
+            <td>23</td>
+            <td>24</td>
+        </tr> 
+        <tr>
+            <td>33</td>
+            <td>32</td>
+            <td>33</td>
+            <td>34</td>
+        </tr> 
+    </table>
+
     <footer>
         Créditos:
         <a
             href="https://borainvestir.b3.com.br/noticias/empresas/entenda-por-que-a-nvidia-mexeu-com-o-mercado-de-tecnologia-e-virou-o-fenomeno-da-ia/">B3
-            Notícias</a>
+            Notícias
+        </a>
     </footer>
 </body>
 </html>
