--- a/Linguagem de Programação II/utils/projeto-4/index.html
+++ b/Linguagem de Programação II/utils/projeto-4/index.html
@@ -7,7 +7,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+    <link href="./style.css" rel="stylesheet">
 
     <title>Apresentação</title>
 </head>
@@ -64,19 +65,19 @@
                     <div class="carousel-item active">
                         <img src="./img/unidade-1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Unidade 1</h5>
+                            <h5 style="color: red">Unidade 1</h5>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./img/lab.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Biblioteca Unidade 1</h5>
+                            <h5 style="color: red">Biblioteca Unidade 1</h5>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./img/inform.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Sala de Informática Unidade 1</h5>
+                            <h5 style="color: red">Sala de Informática Unidade 1</h5>
                         </div>
                     </div>
                 </div>
