--- a/Linguagem de Programação II/utils/projeto-4/formulario.html
+++ b/Linguagem de Programação II/utils/projeto-4/formulario.html
@@ -7,7 +7,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link href="./style.css" rel="stylesheet">
+  <link href="./utils/style.css" rel="stylesheet">
   <link rel="icon" href="./img/favicon.png" type="image/x-icon">
 
   <title>Formulário</title>
@@ -57,7 +57,6 @@
         <div class="mt-2">
           <label for="exampleCPF" class="form-label text-light">CPF</label>
           <input type="number" class="form-control" id="exampleCPF">
-          <!-- fazer verificacao para permitir somente numeros -->
         </div>
 
         <div class="mt-2">
@@ -78,16 +77,14 @@
         <div class="mt-2">
           <label for="examplePhone" class="form-label text-light">Telefone</label>
           <input type="number" class="form-control" id="examplePhone">
-          <!-- fazer verificacao para permitir somente numeros -->
         </div>
 
         <div class="mt-2">
           <label for="exampleOBS" class="form-label text-light">Observações</label>
           <input type="text" class="form-control" id="exampleOBS">
-          <!-- fazer verificacao para permitir somente numeros -->
         </div>
 
-        <div class="mt-3">
+        <div class="mt-2">
           <button type="button" class="btn btn-success" onclick="verificacao()">Enviar Formulário</button>
         </div>
 
@@ -140,7 +137,7 @@
   </div>
 
 
-  <script src="script.js"></script>
+  <script src="./utils/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
