--- a/Linguagem de Programação II/utils/projeto-4/index.html
+++ b/Linguagem de Programação II/utils/projeto-4/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="./img/favicon.png" type="image/x-icon">
-    <link href="./style.css" rel="stylesheet">
+    <link href="./utils/style.css" rel="stylesheet">
 
     <title>Apresentação</title>
 </head>
@@ -34,8 +34,6 @@
               <li class="nav-item">
                 <a class="nav-link text-danger" href="./formulario.html">Formulário</a>
               </li>
-              </li>
-            </ul>
         </div>
       </div>
     </nav>
